# dbcontroller

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  .pylintrc  404.html  PIPENV.md  Pipfile  README.md  TODO.md  index.html  pyproject.toml  setup.cfg  sitemap.xml
data/: README.md  authentication.db
data/old_dbcontroller/manager/: __init__.py  sql.py
data/old_dbcontroller/manager/utils/: __init__.py  ids.py  response.py  row_handler.py  sql_where.py
data/old_dbcontroller/tools/: utils.py
data/old_dbcontroller/types/: dbmanager.py  forms.py  singleton.py  sqlalchemy.py
database/manager/: index.html
database/mongo/: index.html
database/sql/: index.html
databases/: index.html
docs/: README.md  mkdocs.yml
docs/docs/: databases.md  forms.md  id-decoder.md  index.md  mongo.md  notebook.md  scalars.md  sql-search.md  sql-where.md  sql.md
docs/docs/database/: manager.md  mongo.md  sql.md
docs/docs/extras/: id-decoder.md  load.md  sql-q.md
docs/docs/query-list/: index.md  mongo-where.md  sql-where.md
extras/id-decoder/: index.html
extras/load/: index.html
extras/sql-q/: index.html
extras/sql-where/: index.html
forms/: index.html
id-decoder/: index.html
mongo/: index.html
notebook/: index.html
py-notebook/: Forms.ipynb  Full-Databases.ipynb  Models.ipynb  Scalars.ipynb  Untitled.ipynb  Untitled1.ipynb
py-notebook/.ipynb_checkpoints/: Full-Databases-checkpoint.ipynb  Scalars-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
query-list/: index.html
query-list/mongo-where/: index.html
query-list/sql-where/: index.html
scalars/: index.html
scripts/: linter.py  watcher.py
search/: search_index.json
sql/: index.html
sql-search/: index.html
sql-where/: index.html
src/dbcontroller/: __init__.py  forms.py
src/dbcontroller/core/: __init__.py  annotations.py  app.py  base.py  custom_class.py  forms.py  scalars.py  spoc.py  table.py
src/dbcontroller/manager/: __init__.py  admin.py  mongo.py  querying.py  sql.py
src/dbcontroller/manager/utils/: __init__.py  ids.py  mongo_where.py  object_id.py  response.py  row_handler.py  sql_forms.py  sql_where.py
src/dbcontroller/models/: __init__.py  mongo.py  sql.py
src/dbcontroller/pk2/: __init__.py
src/dbcontroller/tools/: __init__.py  utils.py
src/dbcontroller/types/: __init__.py  controller.py  dbmanager.py  forms.py  model.py  scalars.py  singleton.py
src/old_dbcontroller/manager/: mongo.py
src/old_dbcontroller/manager/utils/: pagination.py
src/old_dbcontroller/tools/: __init__.py  models.py
src/old_dbcontroller/types/: model.py  sqlalchemy.py
tests/: register.py  test_mongo.py  test_sql.py
