[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "dbcontroller"
version = "0.1.42"
description = "Python - Database Controller (SQLAlchemy & Motor)"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = []
keywords = ["database", "sql", "mongo"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool]
[tool.pdm]
allow_prereleases = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "build",
    "isort",
    "black",
    "pylint>=3.0.0a5",
    "watchdog>=2.1.9",
    "pre-commit",
    "sqlalchemy",
    "aiosqlite",
    "motor",
    "twine",
    "databases[aiosqlite]>=0.6.1",
]
docs = ["mkdocs>=1.3.1", "mkdocs-material>=8.4.1"]
test = ["pytest>=7.1.2", "pytest-asyncio>=0.19.0", "pytest-json-report>=1.5.0"]
jupyter = ["jupyterlab>=4.0.0a27"]

[tool.pdm.scripts]
watch = "python scripts/watcher.py"
docs-dev = { shell = "cd docs/ && python -m mkdocs serve --dev-addr 0.0.0.0:8055" }
docs-gh = { shell = "cd docs/ && python -m mkdocs gh-deploy --force" }
test = "pytest -rA tests/test_mongo.py tests/test_sql.py --json-report --json-report-summary --json-report-indent 4 --json-report-file tests/.report.json "
notebook = "jupyter-lab"
lint-watch = "python scripts/lint-watch.py"
lint = "python scripts/linter.py"
# PyPi Upload
pypi = "twine upload dist/*"
