[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "dbcontroller"
version = "0.1.49"
description = "Python - Database Controller (SQLAlchemy & Motor)"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = []
keywords = ["database", "sql", "mongo"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
mongo = ["motor"]
sql = ["sqlalchemy", "alembic"]
sqlite = ["sqlalchemy", "databases[aiosqlite]>=0.6.1", "alembic"]
testing = ["dbcontroller[mongo,sqlite]"]

[tool]
[tool.pdm]
allow_prereleases = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = ["sqlalchemy", "aiosqlite", "motor", "databases[aiosqlite]>=0.6.1"]
devops = [
    "isort>=5.10.1",
    "black>=22.6.0",
    "pylint>=2.15.0",
    "bandit>=1.7.4",
    "watchdog>=2.1.9",
    "twine>=4.0.1",
    "mypy>=0.991",
    "ssort>=0.11.6",
    "pre-commit",
]
docs = ["mkdocs>=1.3.1", "mkdocs-material>=8.4.1"]
test = ["pytest>=7.1.2", "pytest-asyncio>=0.19.0", "pytest-json-report>=1.5.0"]
jupyter = ["jupyterlab>=4.0.0a27"]

[tool.pdm.scripts]
watch = "python scripts/watcher.py"

# Docs
docs-dev = { shell = "cd docs/ && python -m mkdocs serve --dev-addr 0.0.0.0:8055" }
docs-gh = { shell = "cd docs/ && python -m mkdocs gh-deploy --force" }

# Testing
test = "pytest -rA tests/test_mongo.py tests/test_sql.py --json-report --json-report-summary --json-report-indent 4 --json-report-file tests/.report.json "
notebook = "jupyter-lab"

# Linters
lint-watch = "python scripts/lint-watch.py"
lint = "python scripts/linter.py"
pre = { shell = "pre-commit run --all-file" }

# PyPi Upload
pypi = "twine upload dist/*"
