[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
name = dbcontroller
version = 0.0.1
keywords = management database

# Author
author = hlop3z

# LICENSE
license_file = LICENSE.txt

# README
description = Python - Database Controller (sqlalchemy & pymongo)
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/hlop3z/dbcontroller
download_url = https://github.com/hlop3z/dbcontroller/releases/download/alpha/dbcontroller-0.0.1.tar.gz
#project_urls =
    #Documentation = https://{project_docs}.com

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


[options]
zip_safe = false
python_requires = >=3.10

# Packages
packages = find:
package_dir =
    =src

# Requires
install_requires =
    sqlalchemy >= 1.4.31
    pymongo >= 4.0.1

[options.packages.find]
where = src