[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
name = dbcontroller
version = 0.1.9
keywords = management database

# Author
author = hlop3z

# LICENSE
license_file = LICENSE.txt

# README
description = Python - Database Controller (sqlalchemy & pymongo)
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/hlop3z/dbcontroller
download_url = https://github.com/hlop3z/dbcontroller/releases/download/alpha/v0.1.9.tar.gz

# Docs
project_urls =
    Documentation = https://hlop3z.github.io/dbcontroller/

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


[options]
zip_safe = false
python_requires = >=3.10

# Packages
packages = find:
package_dir =
    =src

# Requires
#install_requires =
    #sqlalchemy
    #pymongo

[options.packages.find]
where = src
